fixed spacing error

--- a/styles.css
+++ b/styles.css
@@ -612,7 +612,7 @@ img {
   display: inline-flex;
   flex-direction: column;
   flex-shrink: 0;
-  width: 0.48em;
+  width: 0.52em;
   height: 0.85em;
   overflow: hidden;
   border: 2px solid rgba(255, 255, 255, 0.0);
